--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <title>Minha Página </title>
     </head>
 
+
     
     <body>
             
-               <button type="button" onclick="clicou()">Clique aqui</button>;
-             <p id="agradecimento" onclick="redirecionar()"></p>
-            </body>
+        <button type="button" onclick="clicou()">Clique aqui</button>
+               <h3 id="agradecimento"> </h3>
+     </body>
 </html>
