--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
             
         <button type="button" onclick="clicou()">Clique aqui</button>
-               <h3 id="agradecimento"> </h3>
+               <p id="agradecimento" onclick="redirecionar()"></p> 
+               <p id="mousemover" onmouseover="trocar()"> </p>
      </body>
 </html>
